Regression: Crease values are lost after some modifiers #101340

Closed
opened 2022-09-24 22:03:11 +02:00 by Sun Kim · 6 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.1 30.0.15021.11005

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-24 00:36, hash: cd1631b17d
Worked: (newest version of Blender that worked as expected)

Caused by {a8a454287a27d}

Short description of error
Crease values are lost after some modifiers. Tested with Solidify, Subdivision Surface, Triangulate, and Mirror.

3.4.0 Alpha, branch: master, commit date: 2022-09-22 21:54, hash: e9344d329f

MissingCreaseBefore.jpg

3.4.0 Alpha, branch: master, commit date: 2022-09-24 00:36, hash: cd1631b17d

MissingCreaseAfter.jpg

Exact steps for others to reproduce the error

  • Add crease values to some edges of a mesh.
  • Add a modifier that should preserve crease values to the mesh. Solidify, Subdivision Surface, Triangulate, or Mirror would work.
  • Try to get crease values in Geometry Nodes.

MissingCrease.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.1 30.0.15021.11005 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-24 00:36, hash: `cd1631b17d` Worked: (newest version of Blender that worked as expected) Caused by {a8a454287a27d} **Short description of error** Crease values are lost after some modifiers. Tested with Solidify, Subdivision Surface, Triangulate, and Mirror. 3.4.0 Alpha, branch: master, commit date: 2022-09-22 21:54, hash: `e9344d329f` ![MissingCreaseBefore.jpg](https://archive.blender.org/developer/F13564289/MissingCreaseBefore.jpg) 3.4.0 Alpha, branch: master, commit date: 2022-09-24 00:36, hash: `cd1631b17d` ![MissingCreaseAfter.jpg](https://archive.blender.org/developer/F13564291/MissingCreaseAfter.jpg) **Exact steps for others to reproduce the error** - Add crease values to some edges of a mesh. - Add a modifier that should preserve crease values to the mesh. Solidify, Subdivision Surface, Triangulate, or Mirror would work. - Try to get crease values in Geometry Nodes. [MissingCrease.blend](https://archive.blender.org/developer/F13564307/MissingCrease.blend)
Author
Contributor

Added subscriber: @persun

Added subscriber: @persun

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @HooglyBoogly, @deadpin

Added subscribers: @HooglyBoogly, @deadpin

A git bisect does confirm the suspected commit.

CC @HooglyBoogly

A git bisect does confirm the suspected commit. CC @HooglyBoogly
Pratik Borhade changed title from Crease values are lost after some modifiers to Regression: Crease values are lost after some modifiers 2022-09-25 12:12:46 +02:00
Hans Goudey self-assigned this 2022-09-25 16:43:24 +02:00

This issue was referenced by 57ea827bfb

This issue was referenced by 57ea827bfb28eb697b74dbc606facbc133e10fab
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101340
No description provided.