source/blender/blenkernel/intern/object_update.c
@@ -141,9 +141,10 @@ void BKE_object_handle_data_update(Depsgraph *depsgraph, Scene *scene, Object *o
       CustomData_MeshMasks cddata_masks = scene->customdata_mask;
       CustomData_MeshMasks_update(&cddata_masks, &CD_MASK_BAREMESH);
       /* Custom attributes should not be removed automatically. They might be used by the render
-       * engine or scripts. They can still be removed explicitly using geometry nodes. */
-      cddata_masks.vmask |= CD_MASK_PROP_ALL;
-      cddata_masks.emask |= CD_MASK_PROP_ALL;
+       * engine or scripts. They can still be removed explicitly using geometry nodes.
+       * Crease can be be used in generic situations with geometry nodes as well. */
+      cddata_masks.vmask |= CD_MASK_PROP_ALL | CD_MASK_CREASE;
+      cddata_masks.emask |= CD_MASK_PROP_ALL | CD_MASK_CREASE;
       cddata_masks.fmask |= CD_MASK_PROP_ALL;
       cddata_masks.pmask |= CD_MASK_PROP_ALL;
       cddata_masks.lmask |= CD_MASK_PROP_ALL;
